# ECS

./: .gitignore  CMakeLists.txt  ECS.h  Entity.h  EntityComponentSystem.sln  EntityComponentSystem.vcxproj  EntityComponentSystem.vcxproj.filters  LICENSE  README.md  sample.cpp
cmake/: ClangTidy.cmake
